--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,37 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: 'Muli', sans-serif;
+body{
   overflow: hidden;
   margin: 0;
   background: #000000;
   height: 100vh;
+}
+
+.slider-menu{
+  font-family: 'Muli', sans-serif;
+  overflow: hidden;
+  margin: 0;
+  background: #000000;
+  height: 95 vh;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.title{
+  font-family: 'Muli', sans-serif;
+
+  font-size: 50px;
+  color:#ffff;
+
+  display: flex;
+  justify-content: center;
+  background-color: #000000;
+  width: 100%;
+
+  margin-top: 5px;
+  margin-bottom: 0px;
 }
 
 .container{
